--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-react-native-platform-specific-extensions",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description":
     "Allow react-native platform specific extensions to be used for other file types than Javascript.",
   "keywords": ["babel", "babel-plugin"],
@@ -16,7 +16,7 @@
     "url":
       "https://github.com/kristerkari/babel-plugin-react-native-platform-specific-extensions"
   },
-  "files": ["index.js", "README.md"],
+  "files": ["CHANGELOG.md", "index.js", "README.md"],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-jest": "^22.0.4",
