--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "babel-plugin-react-native-platform-specific-extensions",
   "version": "1.0.1",
-  "description":
-    "Allow react-native platform specific extensions to be used for other file types than Javascript.",
-  "keywords": ["babel", "babel-plugin"],
+  "description": "Allow react-native platform specific extensions to be used for other file types than Javascript.",
+  "keywords": [
+    "babel",
+    "babel-plugin"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -13,15 +15,19 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url":
-      "https://github.com/kristerkari/babel-plugin-react-native-platform-specific-extensions"
+    "url": "https://github.com/kristerkari/babel-plugin-react-native-platform-specific-extensions"
   },
-  "files": ["CHANGELOG.md", "index.js", "README.md"],
+  "files": [
+    "CHANGELOG.md",
+    "index.js",
+    "README.md"
+  ],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-jest": "^22.0.4",
     "babel-plugin-tester": "^5.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "coveralls": "^3.0.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
@@ -38,7 +44,10 @@
     "@babel/template": "^7.0.0-beta.37"
   },
   "lint-staged": {
-    "*.js": ["prettier --write", "git add"]
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "eslintConfig": {
     "extends": "standard",
@@ -46,8 +55,14 @@
       "jest": true
     },
     "rules": {
-      "space-before-function-paren": [2, "never"],
-      "semi": [2, "always"],
+      "space-before-function-paren": [
+        2,
+        "never"
+      ],
+      "semi": [
+        2,
+        "always"
+      ],
       "quotes": 0,
       "no-unused-vars": 2
     }
@@ -56,5 +71,20 @@
     "semi": true,
     "singleQuote": false,
     "trailingComma": "none"
+  },
+  "jest": {
+    "coverageDirectory": "./.coverage/",
+    "coverageReporters": [
+      "lcov",
+      "text"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 75,
+        "functions": 75,
+        "lines": 75,
+        "statements": 75
+      }
+    }
   }
 }
