--- a/package.json
+++ b/package.json
@@ -23,25 +23,25 @@
     "README.md"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-jest": "^22.0.4",
-    "babel-plugin-tester": "^5.0.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
+    "babel-plugin-tester": "^5.4.0",
     "babel-preset-es2015": "^6.24.1",
-    "coveralls": "^3.0.0",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-import": "^2.8.0",
+    "coveralls": "^3.0.1",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "husky": "^0.14.3",
-    "jest": "^22.0.4",
-    "jest-cli": "^22.0.4",
-    "lint-staged": "^7.0.0",
-    "prettier": "^1.9.2"
+    "jest": "^23.1.0",
+    "jest-cli": "^23.1.0",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.13.5"
   },
   "dependencies": {
-    "@babel/template": "^7.0.0-beta.37"
+    "@babel/template": "^7.0.0-beta.49"
   },
   "lint-staged": {
     "*.js": [
