--- a/package.json
+++ b/package.json
@@ -24,24 +24,24 @@
   ],
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.2.0",
-    "babel-plugin-tester": "^5.4.0",
+    "babel-jest": "^23.6.0",
+    "babel-plugin-tester": "^5.5.1",
     "babel-preset-es2015": "^6.24.1",
     "coveralls": "^3.0.2",
-    "eslint": "^5.0.1",
+    "eslint": "^5.6.1",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^4.0.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "husky": "^0.14.3",
-    "jest": "^23.3.0",
-    "jest-cli": "^23.3.0",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.7"
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.1.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3"
   },
   "dependencies": {
-    "@babel/template": "^7.0.0-beta.51"
+    "@babel/template": "^7.1.2"
   },
   "lint-staged": {
     "*.js": [
